DuPont DevSB/src/objects/DPT_Nomex_Search_Results__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting for controlling the Scripts and the Questions which needs to be rendered in the Output of the DPT Nomex Search.</description>
    <fields>
        <fullName>Question_Id__c</fullName>
        <label>Question Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Name__c</fullName>
        <description>Question in the text format of the relevant Question Id</description>
        <label>Question Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Script_Id__c</fullName>
        <label>Script Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>DPT_Nomex_Search_Results</label>
</CustomObject>